@@ -1,3 +1,4 @@
+(2000/04/27 - brent) Add -R option to recurse subdirectories
 (2000/04/27 - petr) Changed version number to 15.0bl2
 (2000/04/27 - uzi) Added autoconf and restructure directories
 (2000/04/26 - petr) Tagged current source as v15_0_bl1 before autoconf support
